--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "__avenir_d0bd6f";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/ee0063ed4c3236ca-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/ee0063ed4c3236ca-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 400;
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: "__avenir_d0bd6f";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/ce9abbd2222b7882-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/ce9abbd2222b7882-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 500;
@@ -22,7 +22,7 @@
 
 @font-face {
   font-family: "__avenir_d0bd6f";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/60964256366d74f2-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/60964256366d74f2-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 900;
@@ -31,7 +31,7 @@
 
 @font-face {
   font-family: "__avenir_d0bd6f";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/7d16627dbfbbee5d-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/7d16627dbfbbee5d-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 200;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: "__avenir_d0bd6f";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/33112a1a3babe854-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/33112a1a3babe854-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 700;
@@ -60,7 +60,7 @@
 
 @font-face {
   font-family: "__jeko_bd9979";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/e86cc954d8c82a89-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/e86cc954d8c82a89-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: bold;
@@ -69,7 +69,7 @@
 
 @font-face {
   font-family: "__jeko_bd9979";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/0a5eb17cd5d9a87b-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/0a5eb17cd5d9a87b-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 300;
@@ -78,7 +78,7 @@
 
 @font-face {
   font-family: "__jeko_bd9979";
-  src: url(https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/87cbde00c95e8478-s.p.woff)
+  src: url(https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/87cbde00c95e8478-s.p.woff)
     format("woff");
   font-display: swap;
   font-weight: 400;
