--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="as__header false">
+<header class="as__header {{top}}">
   <nav>
     <a class="as__logo" title="ASULADO" href="/"
       ><img
@@ -11,7 +11,8 @@
         style="color: transparent"
         src="/assets/images/header_logo.svg"
       /><span aria-hidden="true">Asulado</span><b>Seguros de vida</b></a
-    ><button
+    >
+    <button
       id="open_menu"
       data-collapse-toggle="navbar-default"
       type="button"
@@ -26,7 +27,7 @@
       <ul>
         <li><a aria-current="page" title="INICIO" href="/">INICIO</a></li>
         <li>
-          <a aria-current="page" title="NOSOTROS" href="nuestra_empresa"
+          <a aria-current="page" title="NOSOTROS" href="/nuestra_empresa"
             >NOSOTROS</a
           >
         </li>
