--- a/src/partials/home/proposito.html
+++ b/src/partials/home/proposito.html
@@ -28,7 +28,7 @@
     <div class="as__marquee_to_left">Nuestro propósito</div>
   </div>
   <div class="as__proposito_ilus">
-    <img src="/assets/images/img_proposito.png" alt="Asulado"></img>
+    <img src="/assets/images/img_proposito.webp" alt="Asulado"></img>
     <svg viewBox="0 0 1063 666" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
         d="M1041.76 666H21.2383C29.5646 491.686 317 352 531.5 352C746 352 1033.43 491.686 1041.76 666Z"
