--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -3,7 +3,10 @@
     <h1>
       <span class="ban_anim1">Bienvenido a</span>
       <b class="ban_anim1">ASULADO</b>
-      <strong class="ban_anim1">Seguros de Vida</strong>
+      <strong class="ban_anim1"
+        >Te ayudaremos a gestionar tus bienes y a planificar la distribución de
+        tu patrimonio</strong
+      >
     </h1>
   </div>
   <div class="as__banner_elements">
