--- a/src/partials/empresa/como.html
+++ b/src/partials/empresa/como.html
@@ -4,7 +4,7 @@
       <h3 class="as__title_section">¿Cómo lo hacemos?</h3>
     </div>
   </div>
-  <ul class="as__como_posts">
+  <ul id="am__como_car" class="as__como_posts">
     <li class="as__como_item">
       <div class="as__como_item_icon anim">
         <i class="fa-light fa-circle-info"></i>
