--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -58,16 +58,18 @@
           <h5>Menú</h5>
           <ul>
             <li>
-              <a href="#" aria-current="page"> Inicio </a>
+              <a href="/" aria-current="page"> Inicio </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Sobre nosotros </a>
-            </li>
-            <li>
-              <a href="#" aria-current="page"> Sobre nosotros </a>
+              <a href="/nuestra_empresa" aria-current="page">
+                Nuestra empresa
+              </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Gobierno corporativo </a>
+            </li>
+            <li>
+              <a href="#" aria-current="page"> Renta Vitalicia </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Seguro previsional </a>
