--- a/src/partials/home/proposito.html
+++ b/src/partials/home/proposito.html
@@ -18,9 +18,9 @@
       </div>
     </div>
     <div class="as__proposito_link">
-        <a href="/" class="as__button ">
+        <a href="/nuestra_empresa" class="as__button">
             <span>MÁS INFORMACIÓN</span>
-                 <i role="presentation" class="fa-light fa-arrow-right"></i>
+            <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
     </div>
   </div>
