--- a/src/partials/home/servicios.html
+++ b/src/partials/home/servicios.html
@@ -17,7 +17,7 @@
               tranquilidad y libertad.
             </p>
           </div>
-          <a href="/" class="as__button">
+          <a href="/renta_vitalicia" class="as__button">
             <span>MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
