--- a/src/partials/renta_vitalicia/gestion.html
+++ b/src/partials/renta_vitalicia/gestion.html
@@ -4,10 +4,12 @@
       <div class="as__gestion_wrapper">
         <div class="as__gestion_ilustra">
           <h3>¿ Quién lo gestiona ?</h3>
-          <img
-            src="/assets/images/img_gestion.webp"
-            alt="¿ Quién lo gestiona ?"
-          />
+          <div>
+            <img
+              src="/assets/images/img_gestion.webp"
+              alt="¿ Quién lo gestiona ?"
+            />
+          </div>
         </div>
 
         <div class="as__gestion_content">
