--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="as__header {{top}}">
+<header id="as__header" class="as__header {{top}}">
   <nav>
     <a class="as__logo" title="ASULADO" href="/"
       ><img
@@ -24,33 +24,147 @@
       ><i class="fa-solid fa-bars text-xl"></i>
     </button>
     <div class="as__nav_links nav_close" id="navbar-default">
-      <ul>
-        <li><a aria-current="page" title="INICIO" href="/">INICIO</a></li>
-        <li>
-          <a aria-current="page" title="NOSOTROS" href="/nuestra_empresa"
+      <ul class="as__nav_links_ppal">
+        <li class="as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link"
+            aria-current="page"
+            title="INICIO"
+            href="/"
+            >INICIO</a
+          >
+        </li>
+        <li class="hoverable as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link relative block"
+            aria-current="page"
+            title="NOSOTROS"
+            href="/nuestra_empresa"
             >NOSOTROS</a
           >
+          <ul class="mega-menu">
+            <li>
+              <a href="/nuestra_empresa" title="Sobre nosotros">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Sobre nosotros</div>
+                  <p>
+                    Somos una compañía que busca dinamizar el mercado de
+                    desacumulación patrimonial y completar la oferta de
+                    aseguramiento
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+            <li>
+              <a href="/renta_vitalicia" title="Renta Vitalicia">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Gobierno corporativo</div>
+                  <p>
+                    Queremos acompañar a los colombianos para que puedan
+                    construir bienestar para el futuro, el retiro y la vejez,
+                    así como solventar situaciones de invalidez o sobrevivencia
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li>
-          <a aria-current="page" title="PRODUCTOS" href="/test">PRODUCTOS</a>
+        <li class="hoverable as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link relative block"
+            aria-current="page"
+            title="PRODUCTOS"
+            href="/renta_vitalicia"
+            >PRODUCTOS</a
+          >
+          <ul class="mega-menu">
+            <li>
+              <a href="/renta_vitalicia" title="Renta Vitalicia">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Renta Vitalicia</div>
+                  <p>
+                    Es la mesada que el pensionado recibirá mientras cumpla con
+                    los requisitos necesarios, lo que se traduce en tranquilidad
+                    económica
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+            <li>
+              <a href="/renta_vitalicia" title="Renta Vitalicia">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Seguro Previsional</div>
+                  <p>
+                    Es la garantía que tienen todos los cotizantes pensionados
+                    anticipadamente por invalidez o fallecimiento, para hacer su
+                    ahorro efectivo.
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+            <li>
+              <a href="/renta_vitalicia" title="Renta Vitalicia">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Pensión por Sobrevivencia</div>
+                  <p>
+                    Beneficio economico mensual para la familia del beneficiario
+                    en caso de su fallecimiento
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+            <li>
+              <a href="/renta_vitalicia" title="Renta Vitalicia">
+                <div class="mega-menu-content">
+                  <div class="mm_title">Pensión por Invalidez</div>
+                  <p>
+                    Beneficio económico que se entrega a las personas que han
+                    presentado una diacapacidad permanente
+                  </p>
+                </div>
+                <i class="fa-duotone fa-circle-arrow-right"></i>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li>
-          <a aria-current="page" title="SOBREVIVENCIA" href="/"
-            >SOBREVIVENCIA</a
+        <li class="as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link"
+            aria-current="page"
+            title="SOLICITUDES"
+            href="/"
+            >SOLICITUDES</a
           >
         </li>
-        <li><a aria-current="page" title="INVALIDEZ" href="/">INVALIDEZ</a></li>
-        <li>
-          <a aria-current="page" title="SOLICITUDES" href="/">SOLICITUDES</a>
+        <li class="as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link"
+            aria-current="page"
+            title="PREGUNTAS"
+            href="/"
+            >PREGUNTAS</a
+          >
         </li>
-        <li><a aria-current="page" title="PREGUNTAS" href="/">PREGUNTAS</a></li>
-        <li>
-          <button class="dest" aria-current="page" title="Blog | DE INTERÉS">
+        <li class="as__nav_links_ppal_li">
+          <button
+            class="as__nav_links_ppal_link dest"
+            aria-current="page"
+            title="Blog | DE INTERÉS"
+          >
             DE INTERÉS
           </button>
         </li>
-        <li>
-          <a href="#" aria-current="page" title="Usabilidad"
+        <li class="usability as__nav_links_ppal_li">
+          <a
+            class="as__nav_links_ppal_link"
+            href="#"
+            aria-current="page"
+            title="Usabilidad"
             ><i role="presentation" class="fa-solid fa-universal-access"></i
           ></a>
         </li>
