--- a/src/css/app.css
+++ b/src/css/app.css
@@ -106,24 +106,27 @@ body {
 }
 .as__wrapper {
 }
+
 .as__header {
-  @apply flex items-center justify-between bg-transparent py-2 transition-colors duration-300 ease-in-out;
+  @apply fixed left-0 right-0 top-0 z-50 w-full font-sans delay-300 duration-700 flex items-center justify-between bg-transparent py-2 transition-colors ease-in-out;
+  &.open {
+    .as__nav_button {
+      @apply bg-azul-bold text-white focus:ring-blue-200;
+      .i-close {
+        @apply block;
+      }
+      .i-open {
+        @apply hidden;
+      }
+    }
+  }
   &.as__header_scroll,
   &.open,
   &.init {
     @apply border-none lg:border-b border-gray-100 bg-white bg-opacity-50 backdrop-blur-3xl lg:bg-opacity-90 lg:backdrop-blur-sm;
   }
-}
-
-.as__header {
-  @apply fixed left-0 right-0 top-0 z-50 w-full font-sans delay-300 duration-700;
-  &.open {
-    .as__nav_button {
-      @apply bg-azul-bold text-white focus:ring-blue-200;
-    }
-  }
   nav {
-    @apply mx-auto relative flex w-full flex-wrap items-center justify-between 2xl:container 2xl:mx-auto 2xl:px-8;
+    @apply mx-auto flex w-full flex-wrap items-center justify-between 2xl:container 2xl:mx-auto 2xl:px-8;
     .as__logo {
       @apply flex flex-col items-center pl-2 lg:pl-4;
       svg {
@@ -137,39 +140,60 @@ body {
       }
     }
     .as__nav_button {
-      @apply mr-2 inline-flex h-8 w-8 items-center justify-center rounded-lg p-2 text-sm text-primary focus:outline-none focus:ring-2 focus:ring-blue-200 lg:hidden;
+      @apply mr-2 inline-flex h-8 w-8 items-center justify-center rounded-lg p-2 text-sm text-primary focus:outline-none focus:ring-1 focus:ring-azul-bright2 lg:hidden;
+
+      .i-close {
+        @apply hidden;
+      }
+      .i-open {
+        @apply block;
+      }
     }
-    .as__nav_links {
-      @apply hidden h-auto min-h-screen w-full items-center justify-center relative lg:block lg:min-h-max lg:w-auto lg:bg-transparent lg:backdrop-blur-none;
+
+    ul.as__nav_links {
+      @apply hidden lg:flex h-full min-h-screen w-full flex-col items-center py-20 lg:w-auto lg:h-auto lg:min-h-max lg:flex-row lg:gap-x-1 lg:border-0 lg:p-0 xl:gap-x-5 lg:bg-transparent;
 
       &.nav_open {
-        @apply block duration-700 animate-in fade-in;
+        @apply flex duration-700 animate-in fade-in;
       }
-      ul.as__nav_links_ppal {
-        @apply flex h-full min-h-screen w-full flex-col items-center py-20 lg:h-auto lg:min-h-max lg:flex-row lg:gap-x-1 relative lg:border-0 lg:p-0 xl:gap-x-5;
-        li.as__nav_links_ppal_li {
-          @apply my-auto w-full px-4 text-center md:w-auto md:px-0;
-          &.usability {
-            @apply mr-4;
-          }
+      li.as__nav_links_ppal_li {
+        @apply my-auto w-full px-4 text-center md:w-auto md:px-0;
+        &.usability {
+          @apply mr-4;
+        }
+        &.hoverable {
+          @apply static;
 
-          a.as__nav_links_ppal_link,
-          button.as__nav_links_ppal_link {
-            @apply block rounded-2xl px-2 pb-1 pt-1.5 text-xl leading-none text-primary transition-colors ease-in-out hover:bg-blue-100 hover:text-azul-bold md:px-2 md:text-sm;
-            i {
-              @apply text-xl;
-            }
-            &.dest {
-              @apply mx-auto block rounded-full border border-primary bg-white px-3 pb-1.5 pt-2 text-primary;
-              &:hover {
-                @apply bg-amarillo-light text-azul-dark duration-700 animate-in fade-in;
-              }
+          & > a:after {
+            content: "\25BC";
+            @apply hidden lg:block text-[10px] pl-1 relative top-[-1px];
+          }
+          &:hover {
+            .mega-menu {
+              @apply block;
             }
           }
-          .mega-menu {
-            @apply flex lg:hidden lg:w-screen lg:absolute text-left lg:right-0 items-stretch flex-wrap lg:flex-nowrap lg:flex-row;
+        }
+        a.as__nav_links_ppal_link,
+        button.as__nav_links_ppal_link {
+          @apply block rounded-2xl px-2 pb-1 pt-1.5 text-xl leading-none text-primary transition-colors ease-in-out hover:bg-blue-100 hover:text-azul-bold md:px-2 md:text-sm;
+          i {
+            @apply text-xl;
+          }
+          &.dest {
+            @apply mx-auto block rounded-full border border-primary bg-white px-3 pb-1.5 pt-2 text-primary;
+            &:hover {
+              @apply bg-amarillo-light text-azul-dark duration-700 animate-in fade-in;
+            }
+          }
+        }
+
+        .mega-menu {
+          @apply lg:absolute lg:w-screen lg:hidden lg:left-0 text-left w-full;
+          .mega-menu-wrap {
+            @apply w-full mx-auto flex justify-center items-stretch flex-wrap lg:flex-nowrap lg:flex-row;
             li {
-              @apply pt-2 lg:flex-1 relative w-1/2 lg:w-auto;
+              @apply pt-2 lg:flex-1 w-1/2 lg:w-auto;
               &:nth-child(odd) {
                 a {
                   @apply lg:bg-[#DFEFF5] border-r border-azul-bright;
@@ -181,14 +205,14 @@ body {
                 }
               }
               a {
-                @apply p-2 lg:py-8 px-4 flex flex-row gap-x-8 items-center h-full justify-between transition-colors;
+                @apply py-2 px-4 lg:py-8 lg:px-4 flex flex-row gap-x-8 items-center h-full justify-between transition-colors w-full;
                 &:hover {
                   @apply bg-azul-light;
                 }
                 .mega-menu-content {
-                  @apply flex flex-col gap-y-1;
+                  @apply flex flex-col gap-y-1 w-full lg:w-auto;
                   .mm_title {
-                    @apply text-base lg:text-xl text-azul-dark font-je leading-none;
+                    @apply text-center lg:text-left text-base lg:text-xl text-azul-dark font-je leading-none;
                   }
                   p {
                     @apply text-xs lg:block hidden;
@@ -202,25 +226,18 @@ body {
               }
             }
           }
-          &.hoverable {
-            @apply static;
-            & > a:after {
-              content: "\25BC";
-              @apply top-[1ox] relative pl-[6px] text-xs lg:inline-block hidden;
-            }
-            &:hover {
-              .mega-menu {
-                @apply flex;
-              }
-            }
-          }
         }
       }
     }
   }
+  /* } */
 }
+
 .as__header_vigilado {
-  @apply fixed bottom-11 left-2 z-10;
+  @apply fixed bottom-11 left-2 z-10 lg:w-auto w-3;
+  img{
+    @apply w-full;
+  }
 }
 .as__page_home {
 }
@@ -486,7 +503,7 @@ body {
       @apply text-azul-bold;
     }
     .as_proposito_content {
-      @apply mt-40 flex flex-wrap items-center justify-center gap-x-4 gap-y-2 py-12 text-center font-je text-3xl font-bold leading-6 sm:mt-32 sm:pt-28 md:pb-14 md:text-5xl md:leading-none;
+      @apply mt-48 flex flex-wrap items-center justify-center gap-x-4 gap-y-2 py-12 text-center font-je text-3xl font-bold leading-6 sm:mt-32 sm:pt-28 md:pb-14 md:text-5xl md:leading-none;
       span {
         @apply text-primary;
       }
@@ -508,7 +525,7 @@ body {
       @apply mt-0 hidden max-h-[360px] w-full md:mt-0;
     }
     img {
-      @apply mt-0 max-h-[260px] w-full object-contain md:-mt-16 md:max-h-[360px];
+      @apply mt-8 lg:mt-0 max-h-[260px] w-full object-contain md:-mt-16 md:max-h-[360px];
     }
   }
 }
@@ -744,7 +761,7 @@ body {
       @apply text-azul-bold;
     }
     .as_proposito_content {
-      @apply mt-52 md:mt-32 flex flex-col md:flex-row flex-wrap items-end justify-between space-y-8;
+      @apply mt-64 md:mt-32 flex flex-col md:flex-row flex-wrap items-end justify-between space-y-8;
       .as_proposito_content_title {
         @apply w-full font-je md:w-4/12 lg:text-2xl xl:text-3xl md:text-4xl text-azul-bold;
         b {
@@ -772,7 +789,7 @@ body {
       @apply mt-0 hidden max-h-[360px] w-full md:mt-0;
     }
     img {
-      @apply mt-0 max-h-[260px] w-full object-contain md:max-h-[460px];
+      @apply mt-8 md:mt-0 max-h-[260px] w-full object-contain md:max-h-[460px];
     }
   }
 }
