--- a/src/css/app.css
+++ b/src/css/app.css
@@ -763,7 +763,7 @@ body {
     .as_proposito_content {
       @apply mt-64 md:mt-32 flex flex-col md:flex-row flex-wrap items-end justify-between space-y-8;
       .as_proposito_content_title {
-        @apply w-full font-je md:w-4/12 lg:text-2xl xl:text-3xl md:text-4xl text-azul-bold;
+        @apply w-full font-je text-4xl md:w-4/12 lg:text-2xl xl:text-3xl md:text-4xl text-azul-bold;
         b {
           @apply text-azul-dark font-normal;
         }
