--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -69,7 +69,9 @@
               <a href="#" aria-current="page"> Gobierno corporativo </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Renta Vitalicia </a>
+              <a href="/renta_vitalicia" aria-current="page">
+                Renta Vitalicia
+              </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Seguro previsional </a>
@@ -81,7 +83,7 @@
               <a href="#" aria-current="page"> Invalidez </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Solicitudes </a>
+              <a href="#" aria-current="page"> Solicitudes o peticiones </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Preguntas </a>
