--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -142,7 +142,7 @@
           aria-current="page"
           title="SOLICITUDES"
           href="/"
-          >SOLICITUDES</a
+          >SOLICITUDES O PETICIONES</a
         >
       </li>
       <li class="as__nav_links_ppal_li">
