--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -74,7 +74,9 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Seguro previsional </a>
+              <a href="/seguro_previsional" aria-current="page">
+                Seguro previsional
+              </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Sobrevivencia </a>
