--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li>
-              <a href="/renta_vitalicia" title="Renta Vitalicia">
+              <a href="/seguro_previsional" title="Seguro Previsional">
                 <div class="mega-menu-content">
                   <div class="mm_title">Seguro Previsional</div>
                   <p>
