--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -6,20 +6,26 @@
         <div class="as__que_es_ilustra">
           <img
             src="/assets/images/quees_renta_vitalicia.webp"
-            alt="¿Por qué se crea ASULADO?"
+            alt="Renta Vitalicia"
           />
         </div>
 
         <div class="as__que_es_content">
           <p class="prop_anim">
-            Modalidad de pensión que se contrata con una Aseguradora de Vida, en
-            la cual
+            Modalidad de pensión que se contrata con una Aseguradora de Vida,
+            con la cual
             <b
-              >los pensionados reciben de forma periódica el pago de su renta
+              >los pensionados reciben periódicamente el pago de su mesada
               pensional</b
             >
-            siempre que cumplan los requisitos establecidos en la normatividad
-            vigente. Una Renta Vitalicia te ofrece tranquilidad y libertad.s
+            siempre y cuando estén cumpliendo los requisitos que establece la
+            normatividad vigente.
+          </p>
+          <p class="prop_anim">
+            La Renta Vitalicia
+            <b>se ajusta anualmente de acuerdo al IPC o al SMMLV</b>
+            según sea tu caso específico. Esta mesada personal te ofrece
+            tranquilidad y libertad.
           </p>
           <p class="prop_anim">
             <b>Conoce las condiciones generales del producto</b>
