--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -79,10 +79,12 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Sobrevivencia </a>
+              <a href="/pension_sobreviviencia" aria-current="page">
+                Sobrevivencia
+              </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Invalidez </a>
+              <a href="/pension_invalidez" aria-current="page"> Invalidez </a>
             </li>
             <li>
               <a href="#" aria-current="page"> Solicitudes o peticiones </a>
