--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -110,7 +110,10 @@
               </a>
             </li>
             <li>
-              <a href="/renta_vitalicia" title="Renta Vitalicia">
+              <a
+                href="/pension_sobreviviencia"
+                title="Pensión por Sobrevivencia"
+              >
                 <div class="mega-menu-content">
                   <div class="mm_title">Pensión por Sobrevivencia</div>
                   <p>
@@ -122,7 +125,7 @@
               </a>
             </li>
             <li>
-              <a href="/renta_vitalicia" title="Renta Vitalicia">
+              <a href="/pension_invalidez" title="Pensión por Invalidez">
                 <div class="mega-menu-content">
                   <div class="mm_title">Pensión por Invalidez</div>
                   <p>
@@ -166,6 +169,8 @@
       <li class="usability as__nav_links_ppal_li">
         <a
           class="as__nav_links_ppal_link"
+          role="button"
+          onclick="window.interdeal.a11y.openMenu()"
           href="#"
           aria-current="page"
           title="Usabilidad"
