--- a/src/partials/home/documentos.html
+++ b/src/partials/home/documentos.html
@@ -11,8 +11,8 @@
           </h4>
           <div class="as__documentos_content_info">
             <p>
-              Solicitud de colillas, certificados, cajas de compensación, entre
-              otros.
+              ¿Sabes cómo gestionar tus colillas, certificados, cajas de
+              compensación y otros documentos? Te enseñamos a hacerlo.
             </p>
             <a href="/" class="as__button">
               <span>SABER MÁS</span>
