--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -12,21 +12,23 @@
 
         <div class="as__que_es_content">
           <p class="prop_anim">
-            Modalidad de pensión que se contrata con una Aseguradora de Vida,
-            con la cual
+            Modalidad de pensión que se contrata con una Aseguradora de vida, en
+            la cual
             <b
-              >los pensionados reciben periódicamente el pago de su mesada
+              >los pensionados reciben de forma periódica el pago de su renta
               pensional</b
             >
-            siempre y cuando estén cumpliendo los requisitos que establece la
-            normatividad vigente.
+            siempre que cumplan con los requisitos establecidos en la
+            normatividad vigente. Una Renta Vitalicia te ofrece tranquilidad y
+            libertad.
           </p>
-          <p class="prop_anim">
+
+          <!-- <p class="prop_anim">
             La Renta Vitalicia
             <b>se ajusta anualmente de acuerdo al IPC o al SMMLV</b>
             según sea tu caso específico. Esta mesada personal te ofrece
             tranquilidad y libertad.
-          </p>
+          </p> -->
           <p class="prop_anim">
             <b>Conoce las condiciones generales del producto</b>
           </p>
