--- a/src/partials/seguro_previsional/destacados.html
+++ b/src/partials/seguro_previsional/destacados.html
@@ -29,7 +29,10 @@
 
         <div class="as__destacados_item as__destacados_prev serv_seguro">
           <div class="as__destacados_image bg-azul-bright2 md:ml-16">
-            <img src="/assets/images/img_sp_incapacidad.webp" alt="Incapacidad temporal" />
+            <img
+              src="/assets/images/img_sp_incapacidad.webp"
+              alt="Incapacidad temporal"
+            />
           </div>
           <div class="as__destacados_content">
             <h2><span>Incapacidad</span> <b>temporal</b></h2>
