--- a/src/partials/seguro_previsional/listado.html
+++ b/src/partials/seguro_previsional/listado.html
@@ -803,7 +803,7 @@
                 href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
                 target="_blank"
               >
-                Seguro previsional 2023.
+                <span>Seguro previsional 2023.</span>
                 <i class="fa-solid fa-external-link"></i>
               </a>
             </li>
@@ -812,7 +812,7 @@
                 href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
                 target="_blank"
               >
-                Seguimiento a mi solicitud de pensión
+                <span>Seguimiento a mi solicitud de pensión</span>
                 <i class="fa-solid fa-external-link"></i>
               </a>
             </li>
@@ -821,7 +821,7 @@
                 href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
                 target="_blank"
               >
-                Adjuntar mi incapacidad
+                <span>Adjuntar mi incapacidad</span>
                 <i class="fa-solid fa-external-link"></i>
               </a>
             </li>
@@ -830,7 +830,7 @@
                 href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
                 target="_blank"
               >
-                Adjuntar documentos otros trámites
+                <span>Adjuntar documentos otros trámites</span>
                 <i class="fa-solid fa-external-link"></i>
               </a>
             </li>
