--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -90,7 +90,9 @@
               <a href="#" aria-current="page"> Solicitudes o peticiones </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Preguntas </a>
+              <a href="/preguntas_frecuentes" aria-current="page">
+                Preguntas
+              </a>
             </li>
             <li>
               <a href="#" class="dest" aria-current="page"> De interés </a>
