--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -153,7 +153,7 @@
           class="as__nav_links_ppal_link"
           aria-current="page"
           title="PREGUNTAS"
-          href="/"
+          href="/preguntas_frecuentes"
           >PREGUNTAS</a
         >
       </li>
@@ -169,6 +169,7 @@
       <li class="usability as__nav_links_ppal_li">
         <a
           class="as__nav_links_ppal_link"
+          
           role="button"
           onclick="window.interdeal.a11y.openMenu()"
           href="#"
